# cookiecutter-template

./: .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
{{cookiecutter.directory_name}}/: pyproject.toml
