[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = 'README.md'
keywords = ["python"]
classifiers = ['License :: OSI Approved :: {{cookiecutter.license}} License', 'Programming Language :: Python :: 3']
packages = [{ include = "{{cookiecutter.project_name}}", from = "module" }]

[tool.poe.tasks]
init = { shell = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit" }
add = { shell = "poetry add" }
install = { shell = "poetry install" }
build = { shell = "poetry build" }
clean = { shell = "rm -R ./dist .pytest_cache .mypy_cache &> /dev/null" }

isort = { shell = "poetry run isort ./src" }
black = { shell = "poetry run black ./src/" }
mypy = { shell = "poetry run mypy ./src/" }
flake8 = {shell = "poetry run pflake8 ./src/"}
lint = { shell = """poetry run isort ./src && echo '\nBlack:' && poetry run black ./src/ && echo '\nMyPy:' && poetry run mypy ./src/ && echo '\nFlake8:' && poetry run pflake8 ./src/ && poetry run pymarkdownlint """}


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
mypy = "^0.942"
pyproject-flake8 = "*"
pytest = "^7.1.2"
pytest-pspec = "^0.0.4"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-watch = "^4.2.0"
pytest-describe = "^2.0.1"
pylint = "^2.14.5"
black = "^22.6.0"
pytest-describe-it = "^0.1.0"

# Task Runner
poethepoet = "*"

# Test 
[tool.pytest.ini_options]
python_files = [ "*test*.py",]
python_functions = [ "test",]
minversion = "6.0"
addopts = " -p no:warnings --pspec --cov --cov-config=.coveragerc  test" 
testpaths = [ "test",]