[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = 'README.md'
keywords = ["python"]
packages = [{ include = "{{cookiecutter.project_name}}", from = "module" }]



[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pyproject-flake8 = "*"
pytest = "^7.1.2"
pytest-pspec = "^0.0.4"
pytest-clarity = "^1.0.1"
pytest-cov = "^3.0.0"
pytest-watch = "^4.2.0"
pytest-describe = "^2.0.1"
pylint = "^2.14.5"
black = "^22.6.0"
pytest-describe-it = "^0.1.0"


# Test 
[tool.pytest.ini_options]
python_files = [ "*test*.py",]
python_functions = [ "test",]
minversion = "7.0"
addopts = "-p no:warnings --cov --cov-config=.coveragerc --cov-report=term-missing"
testpaths = [ "test",]